Fix stylesheet alignment issue.

--- a/style.css
+++ b/style.css
@@ -64,9 +64,8 @@ h2 {
 #hud {
 	position: absolute;
 	border: 2px solid grey;
-	margin: 100px 10% 10%;
-	width: 75%;
-	//background-color: #303030;
+	margin: 100px;
+	width: 800px;
 	background-color: rgba(50, 50, 50, 0.8);
 }
 
